hard-gists/2408388/run.log
=== Docker Run Log for 2408388 ===
Started at: Mi 29. Okt 13:03:47 CET 2025

[2025-10-29 13:03:48] START: Running container for 2408388
[2025-10-29 13:03:48] SUCCESS: Container 6147fc4efbd5da64cfac73c50ae8889cec9d68cb9665ebe4b29549a451545599 started for 2408388
=== Container logs for 2408388 ===
  File "/snippet.py", line 76
    print 'waking - ' + str(i) + ' - ' + str(info[0])
    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?
=== End of logs for 2408388 ===
[2025-10-29 13:03:50] INFO: Container 6147fc4efbd5da64cfac73c50ae8889cec9d68cb9665ebe4b29549a451545599 has stopped
